# nwi-rs

./: Cargo.toml  README.md
src/: dimension.rs  lib.rs  window.rs
src/platform/: mod.rs
src/platform/win32/: mod.rs
