[package]
name = "native-window-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


#[target.'cfg(target_os="windows")'.dependencies.winapi]
#version = "0.3.9"
#features = ["winbase", "minwindef", "winuser", "windef", "dwmapi", "uxtheme", "winnt"]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_ColorSystem",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Dwm"
]
